--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
   <body>
     <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview baku"><h1>Baku</h1></div>
-      <div class="preview london"><h1>London</h1></div>
-      <div class="preview madrid"><h1>Madrid</h1></div>
-      <div class="preview rome"><h1>Rome</h1></div>
+      <div class="preview baku">
+        <h1>Baku</h1>
+      </div>
+      <div class="preview london">
+        <h1>London</h1>
+      </div>
+      <div class="preview madrid">
+        <h1>Madrid</h1>
+      </div>
+      <div class="preview rome">
+        <h1>Rome</h1>
+      </div>
     </section>
   </body>
 </html>
